force-app/main/default/objects/Account/fields/Brands_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Brands_Purchased__c</fullName>
    <label>Brands Purchased</label>
    <type>Text</type>
    <length>255</length>
    <description>Distinct brands this customer has ordered from (e.g. 'Bean &amp; Brew; Kwitko Coffee'). Set by BrandAffinityService from Order.Brand__c.</description>
</CustomField>