force-app/main/default/objects/Account/fields/Churn_Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Tier__c</fullName>
    <label>Churn Risk Tier</label>
    <type>Picklist</type>
    <description>Value-at-risk tier: A save-at-all-costs, B automated, C light-touch.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>A</fullName><default>false</default><label>A - Save at all costs</label></value>
            <value><fullName>B</fullName><default>false</default><label>B - Automated win-back</label></value>
            <value><fullName>C</fullName><default>false</default><label>C - Light touch</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>