force-app/main/default/objects/Account/fields/Churn_Score__c.field-meta.xml
<CustomField>
    <fullName>Churn_Score__c</fullName>
    <label>Churn Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
    <description>Predictive churn risk 0-1 (Apex scoring stand-in for an Einstein Studio model).</description>
</CustomField>