force-app/main/default/objects/Account/fields/Coffee_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Coffee_Preferences__c</fullName>
    <label>Coffee Preferences</label>
    <description>Customer coffee preferences captured by the Concierge (JSON: likes, dislikes, roast, format, brew, notes). Synced to the Data Cloud unified profile. Checked before any recommendation.</description>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>