force-app/main/default/objects/Account/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <label>Customer Status</label>
    <type>Picklist</type>
    <description>Buyer vs non-buyer indicator. Set to Customer on first order ingestion; Prospect by default. Drives returning-customer personalization.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Prospect</fullName><default>true</default><label>Prospect</label></value>
            <value><fullName>Customer</fullName><default>false</default><label>Customer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>