force-app/main/default/objects/Account/fields/Data_Cloud_Avg_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Avg_Order_Value__c</fullName>
    <label>Data Cloud Avg Order Value</label>
    <description>Average order value from Data Cloud calculated insight or CRM fallback.</description>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>