force-app/main/default/objects/Account/fields/Data_Cloud_Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Churn_Risk__c</fullName>
    <label>Data Cloud Churn Risk</label>
    <description>Low, Medium, or High customer risk signal for service and growth agents.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>