force-app/main/default/objects/Account/fields/Data_Cloud_Favorite_Category__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Favorite_Category__c</fullName>
    <label>Data Cloud Favorite Category</label>
    <description>Top product category from calculated insight or CRM fallback.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>