force-app/main/default/objects/Account/fields/Data_Cloud_Insight_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Insight_Source__c</fullName>
    <label>Data Cloud Insight Source</label>
    <description>Shows whether the cached agent insight came from Data Cloud CI, CRM fallback, or a mixed source.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>