force-app/main/default/objects/Account/fields/Data_Cloud_Last_Augmented_At__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Last_Augmented_At__c</fullName>
    <label>Data Cloud Last Augmented At</label>
    <description>Timestamp when the Account augmentation fields were last refreshed.</description>
    <type>DateTime</type>
</CustomField>