force-app/main/default/objects/Account/fields/Data_Cloud_Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Last_Order_Date__c</fullName>
    <label>Data Cloud Last Order Date</label>
    <description>Most recent order date from Data Cloud calculated insight or CRM fallback.</description>
    <type>Date</type>
</CustomField>