force-app/main/default/objects/Account/fields/Data_Cloud_Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Lifetime_Value__c</fullName>
    <label>Data Cloud Lifetime Value</label>
    <description>Lifetime value from Data Cloud calculated insight or CRM fallback, cached for verified agent use.</description>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>