force-app/main/default/objects/Account/fields/Data_Cloud_Next_Best_Action__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Next_Best_Action__c</fullName>
    <label>Data Cloud Next Best Action</label>
    <description>Business-rule-driven action guidance for Agentforce, based on calculated insight and CRM fallback context.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>