force-app/main/default/objects/Account/fields/Data_Cloud_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Order_Count__c</fullName>
    <label>Data Cloud Order Count</label>
    <description>Order count from Data Cloud calculated insight or CRM fallback, cached for agent grounding.</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>