force-app/main/default/objects/Account/fields/Data_Cloud_Profile_Summary__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Profile_Summary__c</fullName>
    <label>Data Cloud Profile Summary</label>
    <description>Agent-safe summary of unified profile and calculated insight context. Only expose through verified-identity flows.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>