force-app/main/default/objects/Account/fields/Data_Cloud_Return_Count__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Return_Count__c</fullName>
    <label>Data Cloud Return Count</label>
    <description>Return count from Data Cloud return-risk insight or CRM fallback.</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>