force-app/main/default/objects/Account/fields/Data_Cloud_Segment__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Segment__c</fullName>
    <label>Data Cloud Segment</label>
    <description>Agent-facing customer segment such as New, Lapsed, Occasional, Recurrent, or VIP.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>