force-app/main/default/objects/Account/fields/Data_Cloud_Unified_Individual_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Unified_Individual_Id__c</fullName>
    <label>Data Cloud Unified Individual Id</label>
    <description>Unified Individual identifier from Data Cloud, cached on Account for agent grounding and troubleshooting.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>