force-app/main/default/objects/Account/fields/Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent__c</fullName><label>Email Consent</label><type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Customer has consented to receive marketing/offer emails. Agents must check this before emailing.</description>
</CustomField>