force-app/main/default/objects/Account/fields/Email_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent_Date__c</fullName><label>Email Consent Date</label><type>DateTime</type>
    <description>When the customer granted email consent.</description>
</CustomField>