force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName><label>Gender</label><type>Text</type><length>20</length>
    <description>Self-identified gender (demographic for Data Cloud insights).</description>
</CustomField>