force-app/main/default/objects/Account/fields/Has_Returned_Order__c.field-meta.xml
<CustomField>
    <fullName>Has_Returned_Order__c</fullName>
    <label>Has Returned Order</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>