force-app/main/default/objects/Account/fields/Insights_AOV__c.field-meta.xml
<CustomField>
    <fullName>Insights_AOV__c</fullName>
    <label>Insights: Avg Order Value</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>