force-app/main/default/objects/Account/fields/Insights_Avg_Days_Between_Orders__c.field-meta.xml
<CustomField>
    <fullName>Insights_Avg_Days_Between_Orders__c</fullName>
    <label>Insights: Avg Days Between Orders</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>1</scale>
</CustomField>