force-app/main/default/objects/Account/fields/Insights_Days_Since_Last_Order__c.field-meta.xml
<CustomField>
    <fullName>Insights_Days_Since_Last_Order__c</fullName>
    <label>Insights: Days Since Last Order</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>