force-app/main/default/objects/Account/fields/Insights_Device_Count__c.field-meta.xml
<CustomField>
    <fullName>Insights_Device_Count__c</fullName>
    <label>Insights: Distinct Devices</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>