force-app/main/default/objects/Account/fields/Insights_Has_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Insights_Has_Subscription__c</fullName>
    <label>Insights: Has Active Subscription</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>