force-app/main/default/objects/Account/fields/Insights_Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Insights_Last_Order_Date__c</fullName>
    <label>Insights: Last Order Date</label>
    <type>Date</type>
</CustomField>