force-app/main/default/objects/Account/fields/Insights_Last_Replenish_Email__c.field-meta.xml
<CustomField>
    <fullName>Insights_Last_Replenish_Email__c</fullName>
    <label>Insights: Last Replenishment Email</label>
    <type>Date</type>
</CustomField>