force-app/main/default/objects/Account/fields/Insights_Last_Web_Activity__c.field-meta.xml
<CustomField>
    <fullName>Insights_Last_Web_Activity__c</fullName>
    <label>Insights: Last Web Activity</label>
    <type>DateTime</type>
</CustomField>