force-app/main/default/objects/Account/fields/Insights_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Insights_Lifecycle_Stage__c</fullName>
    <label>Insights: Lifecycle Stage</label>
    <type>Text</type>
    <length>40</length>
</CustomField>