force-app/main/default/objects/Account/fields/Insights_LTV__c.field-meta.xml
<CustomField>
    <fullName>Insights_LTV__c</fullName>
    <label>Insights: Lifetime Value</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>