force-app/main/default/objects/Account/fields/Insights_Next_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Insights_Next_Renewal__c</fullName>
    <label>Insights: Next Subscription Renewal</label>
    <type>Date</type>
</CustomField>