force-app/main/default/objects/Account/fields/Insights_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Insights_Open_Cases__c</fullName>
    <label>Insights: Open Cases</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>