force-app/main/default/objects/Account/fields/Insights_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Insights_Order_Count__c</fullName>
    <label>Insights: Order Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>