force-app/main/default/objects/Account/fields/Insights_Returns__c.field-meta.xml
<CustomField>
    <fullName>Insights_Returns__c</fullName>
    <label>Insights: Return Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>