force-app/main/default/objects/Account/fields/Insights_RFM_Segment__c.field-meta.xml
<CustomField>
    <fullName>Insights_RFM_Segment__c</fullName>
    <label>Insights: RFM Segment</label>
    <type>Text</type>
    <length>40</length>
</CustomField>