force-app/main/default/objects/Account/fields/Insights_Session_Count__c.field-meta.xml
<CustomField>
    <fullName>Insights_Session_Count__c</fullName>
    <label>Insights: Web Sessions</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>