force-app/main/default/objects/Account/fields/Insights_Subscription_Count__c.field-meta.xml
<CustomField>
    <fullName>Insights_Subscription_Count__c</fullName>
    <label>Insights: Active Subscription Count</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>