force-app/main/default/objects/Account/fields/Insights_Subscription_Value__c.field-meta.xml
<CustomField>
    <fullName>Insights_Subscription_Value__c</fullName>
    <label>Insights: Active Subscription Value</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Sum of (quantity x price) across active subscription Assets. Computed by SubscriptionInsightsService; flows to the unified profile via the Account DMO.</description>
</CustomField>