force-app/main/default/objects/Account/fields/Insights_Taste_Profile__c.field-meta.xml
<CustomField>
    <fullName>Insights_Taste_Profile__c</fullName>
    <label>Insights: Taste Profile</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>