force-app/main/default/objects/Account/fields/Insights_Total_Cases__c.field-meta.xml
<CustomField>
    <fullName>Insights_Total_Cases__c</fullName>
    <label>Insights: Total Cases</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>