force-app/main/default/objects/Account/fields/Insights_Updated__c.field-meta.xml
<CustomField>
    <fullName>Insights_Updated__c</fullName>
    <label>Insights: Last Computed</label>
    <type>DateTime</type>
</CustomField>