force-app/main/default/objects/Account/fields/Insights_Web_Events__c.field-meta.xml
<CustomField>
    <fullName>Insights_Web_Events__c</fullName>
    <label>Insights: Web Events</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>