force-app/main/default/objects/Account/fields/Is_Multi_Brand__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_Brand__c</fullName>
    <label>Is Multi-Brand</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True if this customer has ordered from more than one brand (Kwitko Coffee + Bean &amp; Brew). Set by BrandAffinityService.</description>
</CustomField>