force-app/main/default/objects/Account/fields/Last_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Return_Date__c</fullName>
    <label>Last Return Date</label>
    <type>Date</type>
</CustomField>