force-app/main/default/objects/Account/fields/Last_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Last_Return_Reason__c</fullName>
    <label>Last Return Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>