force-app/main/default/objects/Account/fields/Last_Scored__c.field-meta.xml
<CustomField>
    <fullName>Last_Scored__c</fullName>
    <label>Last Scored</label>
    <type>DateTime</type>
    <description>When the predictive scoring last ran for this customer.</description>
</CustomField>