force-app/main/default/objects/Account/fields/Predicted_LTV__c.field-meta.xml
<CustomField>
    <fullName>Predicted_LTV__c</fullName>
    <label>Predicted LTV</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Predicted forward 12-month value.</description>
</CustomField>