force-app/main/default/objects/Account/fields/Return_Count__c.field-meta.xml
<CustomField>
    <fullName>Return_Count__c</fullName>
    <label>Return Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>