force-app/main/default/objects/Account/fields/Value_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Value_At_Risk__c</fullName>
    <label>Value at Risk</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>NULLVALUE(Churn_Score__c,0) * NULLVALUE(Predicted_LTV__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Expected dollars lost if the customer churns = churn x predicted LTV.</description>
</CustomField>