force-app/main/default/objects/Account/fields/Web_Events_30d__c.field-meta.xml
<CustomField>
    <fullName>Web_Events_30d__c</fullName>
    <label>Web Events (30d)</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <description>Count of stitched Web_Event__c engagement events in the last 30 days. Feeds churn scoring.</description>
</CustomField>