force-app/main/default/objects/Account/fields/Web_Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>Web_Last_Seen__c</fullName>
    <label>Web Last Seen</label>
    <type>DateTime</type>
    <description>Most recent stitched website activity (Web_Event__c.Occurred_At__c). Feeds churn scoring.</description>
</CustomField>