force-app/main/default/objects/Account/fields/Winback_Needed__c.field-meta.xml
<CustomField>
    <fullName>Winback_Needed__c</fullName>
    <label>Winback Needed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set true when a return is processed; the Growth agent detects this to start a confidence-rebuild offer.</description>
</CustomField>