force-app/main/default/objects/Account/fields/Woo_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Woo_Customer_Id__c</fullName>
    <label>Woo Customer Id</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>WooCommerce customer ID; links unified profile to Person Account.</description>
</CustomField>