force-app/main/default/objects/Account/recordTypes/Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Account</fullName>
    <active>true</active>
    <label>Business Account</label>
    <description>Standard business (company) account record type. Required prerequisite for enabling Person Accounts.</description>
</RecordType>