force-app/main/default/objects/Account/listViews/At_Risk_Accounts.listView-meta.xml
<ListView>
    <fullName>At_Risk_Accounts</fullName>
    <label>At-Risk Accounts (Churn Tier A)</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Churn_Risk_Tier__c</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
</ListView>